# Building-AI-Agents-with-Python

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  cli.py  core.py  model.py  tools.py
agent/utils/: circuitbreaker.py  evalharness.py  metrics.py  observability.py  replay.py  validation.py
datasets/golden/: basic.jsonl
scripts/: create-demo.sh
tests/: test_core.py  test_safety.py  test_tools.py
